# object_oriented_programming_task_v3

./: CMakeLists.txt  FileGenerator.cpp  FileGenerator.h  OP_v3.dmg  Person.cpp  Person.h  README.md  Student.cpp  Student.h  TextReader.cpp  TextReader.h  UserInterface.cpp  UserInterface.h  installer.sh  libraries.h  main.cpp
